--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -18,7 +18,7 @@ jobs:
         uses: quarto-dev/quarto-actions/render@v2
 
       - name: Deploy PR Preview
-        uses: dan-hanlon/pr-preview-action@62f1f6206ef1e71283c58ced9a978c429e6140ec
+        uses: dan-hanlon/pr-preview-action@main
         with:
           source-dir: ./_site/
           custom-url: uclhal.org
