Fix preview URL  (#73)
* reference action fork

* file mixup

* ref branch

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -18,6 +18,7 @@ jobs:
         uses: quarto-dev/quarto-actions/render@v2
 
       - name: Deploy PR Preview
-        uses: rossjrw/pr-preview-action@v1.2.0
+        uses: dan-hanlon/pr-preview-action@main
         with:
           source-dir: ./_site/
+          custom-url: uclhal.org
