extra awesome + author>>proposer

--- a/resources/awesome.yaml
+++ b/resources/awesome.yaml
@@ -1,18 +1,36 @@
+- title: "The Art of the Command Line"
+  proposer: Steve Harris
+  date: 2022-11-25
+  url: https://github.com/jlevy/the-art-of-command-line
+  description: "This is a selection of notes and tips on using the command-line that we've found useful when working on Linux. Some tips are elementary, and some are fairly specific, sophisticated, or obscure. This page is not long, but if you can use and recall all the items here, you know a lot."
+  categories:
+    - software carpentry
+    - linux
+    - command line
+- title: "DAGitty — draw and analyze causal diagrams"
+  proposer: Steve Harris
+  date: 2022-11-25
+  url: http://dagitty.net
+  description: "DAGitty is a browser-based environment for creating, editing, and analyzing causal diagrams (also known as directed acyclic graphs or causal Bayesian networks). The focus is on the use of causal diagrams for minimizing bias in empirical studies in epidemiology and other disciplines."
+  categories:
+    - causal inference
+    - tools
+    - dataviz
 - title: "Causal Inference: What If?"
-  author: Steve Harris
+  proposer: Steve Harris
   date: 2022-11-22
   url: https://www.hsph.harvard.edu/miguel-hernan/causal-inference-book/
   description: I read drafts of this book during my Phd, and loved it. Miguel Hernan writes beautifully, and I found his reasoning and explanations very intuitive.
   categories:
-    - causal causal
+    - causal inference
     - reading
     - book
     - miguel hernan
     - james robbins
 - title: "JAMA Guide to Statistics and Methods" 
-  author: Steve Harris
+  proposer: Steve Harris
   description: > 
-    I found this through this article [Why Test for Proportional Hazards?](https://doi.org/10.1001/jama.2020.1267) by the amazing Miguel Hernan (author of 'Causal Inference: What If')
+    I found this through this article [Why Test for Proportional Hazards?](https://doi.org/10.1001/jama.2020.1267) by the amazing Miguel Hernan (proposer of 'Causal Inference: What If')
   date: 2022-11-22
   url: https://jamanetwork.com/collections/44042/jama-guide-to-statistics-and-methods 
   categories:
@@ -21,7 +39,7 @@
     - miguel hernan
     - Statistics
 - title: "HealthyR: R for Health Data Science"
-  author: Ruaraidh Campbell
+  proposer: Ruaraidh Campbell
   description: |
     A great free beginner introduction to R for healthcare professionals!  Created by Prof Ewan Harrison (a professor of Surgical & Data Science at Edinburgh University), this course takes you from an absolute beginner, with topics such as "what is R?" & "how to install it", through to running your own regression analyses and producing plots!
   date: 2022-11-19
