--- a/resources/awesome.yaml
+++ b/resources/awesome.yaml
@@ -67,7 +67,7 @@
     - data science
     - R
 - title: "ROS"
-  proposer: Ahmed AL-Hindawi
+  proposer: Ahmed Al-Hindawi
   description: "The Robot Operating System (ROS) is a framework that has gained widespread adoption for asynchronous publisher-subscriber model aiming at making all things Robots easier."
   date: 2022-12-14
   url: https://www.ros.org
@@ -97,3 +97,12 @@
     - python
     - tool
     - framework
+- title: "einops"
+  proposer: Ahmed Al-Hindawi
+  description: "A framework agnostic library that makes the task of reshaping, reducing, and repeating tensor shapes easy."
+  date: 2022-12-14
+  url: https://einops.rocks/
+  categories:
+    - python
+    - tool
+    - neural networks
