adding plausible analytics

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,9 @@ format:
     #   dark: darkly
     css: styles.css
     toc: true
+    include-in-header: 
+      text: |
+        <script defer data-domain="uclhal.org" src="https://plausible.io/js/script.js"></script>
 
 website:
   title: "UCL Health Algorithms Laboratory"
